--- a/css/bear.css
+++ b/css/bear.css
@@ -11,6 +11,8 @@ html {
 /* Write your solution here */
 
 @media only screen and (max-width: 1196px) {
-  position: fixed;
-  left: 
+  #bear {
+    position: fixed;
+    left: 900px;
+  } 
 }
