--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,4 +10,7 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width:)
+@media only screen and (max-width: 1330px) {
+  position: absolute;
+  top: -100px;
+}
