--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -11,6 +11,8 @@ html {
 /* Write your solution here */
 
 @media only screen and (max-width: 1330px) {
-  position: absolute;
-  top: -100px;
+  #ostrich {
+    position: absolute;
+    top: -100px;
+  }
 }
