--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,3 +20,8 @@ html {
 
 /* Write your solution here */
 
+@media screen only and (min-width: 642px) and (max-width: 1090px) {
+  #dolphin {
+    transform: rotate();
+  }
+}
