--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,7 +20,7 @@ html {
 
 /* Write your solution here */
 
-@media screen only and (min-width: 642px) and (max-width: 1090px) {
+@media only screenand (min-width: 642px) and (max-width: 1090px) {
   #dolphin {
     transform: rotate();
   }
