--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,8 +20,9 @@ html {
 
 /* Write your solution here */
 
-@media only screenand (min-width: 642px) and (max-width: 1090px) {
+@media only screen and (min-width: 642px) and (max-width: 1090px) {
   #dolphin {
-    transform: rotate();
+    transform: rotate;
+    
   }
 }
