--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,3 +20,9 @@ html {
 
 /* Write your solution here */
 
+@media only screen and (min-width: 642px) and (max-width: 1090px) {
+  #dolphin {
+    transform: rotate(0.5turn);
+    top: 40px;
+  }
+}
