--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,3 +10,9 @@ html {
 
 /* Write your solution here */
 
+@media only screen and (max-width: 1330px) {
+  #ostrich {
+    position: absolute;
+    top: -100px;
+  }
+}
